<resources>
    <string name="app_name">Arabisca</string>
    <string name="enter_your_code_here">Enter Your Code Here</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="movie_info">RELEASE DATE: %s\tRATE: %s\tDURATION: %s</string>
    <string name="series_info">RELEASE DATE: %s    RATE: %s    SEASONS: %s</string>
    <string name="add_to_favourite">Add To Favourites</string>
    <string name="dashed">-</string>
    <string name="under_score">_</string>
    <string name="space">\u0020</string>
    <string name="cast">Cast: %s</string>
    <string name="season">Season %s</string>
    <string name="remove_from_fav">Remove from favourite</string>
    <string name="default_notification_channel_id">cobraNotificationChannel</string>
    <string name="restart_app_to_apply_server">يجب اعادة تشغيل التطبيق لتفعيل التغيير</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="channels">Channels</string>
    <string name="movies_">Movies></string>
    <string name="series_">Series></string>
    <string name="channels_">Channels></string>
    <string name="radio">Radio</string>
    <string name="title_file_download">Updating  Go</string>
    <string name="downloading">Downloading</string>
    <string name="storage_access_required">Access required</string>
    <string name="logo">logo</string>
    <string name="welcome">Welcome,</string>
    <string name="catch_up">catch up</string>
    <string name="setting">setting</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="play_now">Play Now</string>
    <string name="storage_permission_denied">Storage Needed</string>
    <string name="loading">Loading</string>
    <string name="live_tv">Live Tv</string>
    <string name="now_updating_n_please_wait">Now updating</string>
    <string name="update_media_content">Updating media content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trailer">Trailer</string>

</resources>